fixing horizontal overflow on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -135,7 +135,7 @@ h2 {
     #sidebar {
         width: 100%;
         height: 60vh;
-        max-width: none;
+        max-width: 100%;
         top: auto;
         bottom: 0;
         left: 0;
